--- a/index.html
+++ b/index.html
@@ -173,6 +173,14 @@
             padding: 0px 37%;
         }
 
+        .version-number {
+            position: fixed;
+            bottom: 10px;
+            right: 10px;
+            color: #808080;
+            font-size: 12.0px;
+        }
+
     </style>
 </head>
 <body>
@@ -180,6 +188,9 @@
     <div id="loadingOverlay" class="loading-overlay">
         <div class="loading-text">loading...</div>
     </div>
+
+    <!-- 新增的版本号元素 -->
+    <div class="version-number">V1.4.1 公测版</div>
 
     <div class="search-container">
         <h1>学术文献搜索</h1>
