--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             position: relative;
             display: inline-block;
             transition: transform 0.3s ease; 
+            cursor: pointer; 
         }
 
         h1::after {
@@ -145,6 +146,7 @@
             opacity: 0; 
             transform: translateX(-50px) scale(0.5); 
             transition: opacity 0.3s ease, transform 0.3s ease; 
+            cursor: default; 
         }
 
         .vertical-text2 {
@@ -171,7 +173,8 @@
             color: #808080;
             text-align: left; 
             font-size: 13px; 
-            padding: 0px 37%;
+            padding: 0px 37%; 
+            cursor: default; 
         }
 
         .version-number {
@@ -179,7 +182,8 @@
             bottom: 10px;
             right: 10px;
             color: #808080;
-            font-size: 12.0px;
+            font-size: 12.0px; 
+            cursor: default; 
         }
 
     </style>
@@ -190,11 +194,10 @@
         <div class="loading-text">loading...</div>
     </div>
 
-    <!-- 新增的版本号元素 -->
-    <div class="version-number">V1.4.1 公测版</div>
+    <div class="version-number">V1.4.4 公测版</div>
 
     <div class="search-container">
-        <h1>学术文献搜索</h1>
+        <h1 onclick="copyToClipboard()">学术文献搜索</h1>
 
         <span class="vertical-text1">无需登录</span>
         <span class="vertical-text2">自由复制</span>
@@ -257,6 +260,16 @@
             window.open(newUrl, '_blank');
         });
 
+        function copyToClipboard() {
+            const textToCopy = "https://ethankent2007.github.io/";
+            const el = document.createElement('textarea');
+            el.value = textToCopy;
+            document.body.appendChild(el);
+            el.select();
+            document.execCommand('copy');
+            document.body.removeChild(el);
+            alert("已复制本站链接到剪切板！快去分享吧~");
+        }
     </script>
 </body>
 </html>
