--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <style>
 
         body {
+            user-select: none;
+            -webkit-user-select: none; 
+            -moz-user-select: none; 
+            -ms-user-select: none; 
             font-family: Arial, sans - serif;
             background-color: #121212; 
             color: #ffffff; 
