--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
         <div class="loading-text">loading...</div>
     </div>
 
-    <div class="version-number">V1.4.5 公测版</div>
+    <div class="version-number">V1.4.7 公测版</div>
 
     <div class="search-container">
         <h1 onclick="copyToClipboard()">学术文献搜索</h1>
@@ -238,6 +238,10 @@
     </footer>
 
     <script>
+
+        document.addEventListener('contextmenu', function (e) {
+            e.preventDefault();
+        });
 
         window.addEventListener('load', function () {
             const loadingOverlay = document.getElementById('loadingOverlay');
