--- a/index.html
+++ b/index.html
@@ -279,22 +279,36 @@
             alert("已复制本站链接到剪切板！快去分享吧~");
         }
 
-    document.addEventListener('keydown', function (e) {
-        if (e.key === 'F12' || (e.ctrlKey && e.shiftKey && (e.key === 'I' || e.key === 'C'))) {
-            e.preventDefault();
+        document.addEventListener('keydown', function (e) {
+            if (
+                e.key === 'F12' ||
+                (e.ctrlKey && e.shiftKey && (e.key === 'I' || e.key === 'C')) ||
+                (e.ctrlKey && (e.key === 'u' || e.key === 'U'))
+            ) {
+                e.preventDefault();
                 window.location.href = 'error.html';
-        }
-    });
+            }
+        });
 
-    function checkDevTools() {
-        const hasDevToolsOpen = window.outerWidth - window.innerWidth > 160 || window.outerHeight - window.innerHeight > 160;
-        if (hasDevToolsOpen) {
-                window.location.href = 'error.html';
+
+
+        ConsoleManager.onOpen = function() {
+            let target = "";
+            try {
+                window.open("about:blank", (target = "_self"));
+            } catch (err) {
+                let a = document.createElement("button");
+                a.onclick = function() {
+                    window.open("about:blank", (target = "_self"));
+                };
+                a.click();
+            }
         };
-        console.log('%c', devtools);
-    };
-    setInterval(checkDevTools, 1000);
-
+        ConsoleManager.onClose = function() {
+        };
+        ConsoleManager.init();
+    }
+        
     </script>
 </body>
 </html>
