--- a/index.html
+++ b/index.html
@@ -196,13 +196,13 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background-color: black;
+            background-color: #121212;
             display: flex;
             justify-content: center;
             align-items: center;
             z-index: 99999;
             color: white;
-            font-size: 24px;
+            font-size: 20px;
         }
     </style>
 </head>
