--- a/error.html
+++ b/error.html
@@ -4,7 +4,7 @@
     <meta charset="UTF - 8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="icon.png" type="image/x-icon">
-    <title>Error</title>
+    <title>公告</title>
     <style>
         body {
             user-select: none;
@@ -37,8 +37,8 @@
 </head>
 <body>
     <div class="container">
-<h1>Error</h1>
-抱歉，出现错误，请<a href="https://ethankent2007.github.io/" style="text-decoration: underline; color: #ffffff;">重试</a>
+<h1>公告：</h1>
+由于工作室业务调整，<br>我们的页面转移到了<a href="https://ethankent2007.github.io/" style="text-decoration: underline; color: #ffffff;">新页面</a>
     <footer>
         Copyright &copy 2023-2025 KentStudio. All rights reserved. 
     </footer>
