--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <body>
     <div class="container">
 <h1>公告：</h1>
-由于工作室业务调整，<br>我们的网站永久转移到了<a href="https://ethankent2007.github.io/tool.wenxian.search/" style="text-decoration: underline; color: #ffffff;">新页面</a>
+由于工作室业务调整，<br>我们的网站永久转移到了<a href="https://ethankent2007.github.io/tool.wenxian.search/" style="text-decoration: underline; color: #ffffff;">新页面</a>，<br>我们对您因此带来的不便而深表歉意！
     <footer>
         Copyright &copy 2023-2025 KentStudio. All rights reserved. 
     </footer>
