--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 <body>
     <div class="container">
 <h1>公告：</h1>
-        鉴于KentStudio工作室近期对业务进行的一系列调整，<br>
-        本网站已永久性迁移至<a href="https://ethankent2007.github.io/tool.wenxian.search/" style="text-decoration: underline; color: #ffffff;">新页面，</a><br>
+        鉴于本工作室近期对业务进行的一系列调整，<br>
+        本网站已永久性迁移至<a href="https://ethankent2007.github.io/tool.wenxian.search/" style="text-decoration: underline; color: #ffffff;">新页面</a>，<br>
         对于由此给您造成的不便，我们深表歉意！ 
         
         <footer>
