--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="index_icon.png" type="image/x-icon">
-    <title>维护中</title>
+    <title>系统维护中</title>
     <style>
         body {
             font-family: Arial, sans-serif;
